--- a/bitstarter/index.html
+++ b/bitstarter/index.html
@@ -3,7 +3,6 @@
 	<head>
 		<meta charset="utf-8">
 		<title>ChatSpot Bitstarter</title>
-	
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
@@ -121,11 +120,30 @@
 				height: 100%;
 			}
 
+			/* http://support.addthis.com/customer/portal/questions/1136093-share-buttons-in-center-position */      
+			div.addthis_toolbox {
+				width:140px;
+				margin: 0 auto;
+			}
 
-
-
-
+			.order {
+				width:200px;
+				margin: 0 auto;
+			}
 		</style>
+
+
+		<script type="text/javascript">
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-42970680-1']);
+			_gaq.push(['_trackPageview']);
+
+			(function() {
+				var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+		</script>
 	</head>
 
 	<body>
@@ -173,53 +191,67 @@
 			<div class="row-fluid pitch">
 				<div class="span5 offset1 video">
 					<div class="flex-video">
-						<iframe width="480" height="300" src="http://www.youtube.com/embed/bUfrKO0YueM?feature=player_detailpage" frameborder="0" allowfullscreen></iframe>
+						<iframe width="480" height="300" src="http://www.youtube.com/embed/bUfrKO0YueM?feature=player_detailpage" alt="Placeholder" frameborder="0" allowfullscreen></iframe>
 				</div>
 					<!--img class="img-polaroid" src="http://placehold.it/480x300"-->
 				</div>
 
 				<!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
 				<div class="span5 actions">
-					<div class="span8 offset2">
-						<div class="statistics">
-							<div class="span4">
-								<!-- linediv-l and linediv-r give dividing lines that look
-								different in horizontal and vertical layouts, illustrating
-								media queries. -->
-								<div class="linediv-l">
-									<h3>1000</h3> <p>backers</p>
+					<div class="row-fluid">
+						<div class="span10 offset1">
+							<div class="row-fluid statistics">
+								<div class="span4">
+									<!-- linediv-l and linediv-r give dividing lines that look
+									different in horizontal and vertical layouts, illustrating
+									media queries. -->
+									<div class="linediv-l">
+										<h3>1000</h3> <p>backers</p>
+									</div>
 								</div>
-							</div>
-							<div class="span4">
-								<div class="linediv-c">
-									<h3>$6000</h3> <p>of $10,000</p>
+								<div class="span4">
+									<div class="linediv-c">
+										<h3>$6000</h3> <p>of $10,000</p>
+									</div>
 								</div>
-							</div>
-							<div class="span4">
-								<div class="linediv-r">
-								<h3>10</h3> <p>days left</p>
+								<div class="span4">
+									<div class="linediv-r">
+									<h3>10</h3> <p>days left</p>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="span10 offset1">
-						<!-- Bootstrap progress bar -->
-						<!-- http://twitter.github.io/bootstrap/components.html#progress -->
-						<div class="thermometer progress active">
-							<div class="bar bar-success" style="width: 60%;"></div>
-							<div class="bar bar-warning" style="width: 40%;"></div>
+					<div class="row-fluid">
+						<div class="span10 offset1">
+							<!-- Bootstrap progress bar -->
+							<!-- http://twitter.github.io/bootstrap/components.html#progress -->
+							<div class="thermometer progress active">
+								<div class="bar bar-success" style="width: 60%;"></div>
+								<div class="bar bar-warning" style="width: 40%;"></div>
+							</div>
 						</div>
 					</div>
-					<div class="span6 offset3 order">
-						<!-- Standard Bootstrap button. -->
-						<!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-						<button class="btn btn-success btn-large">Preorder</button>
+					<div class="row-fluid">
+						<div class="span12 order">
+							<a class="coinbase-button" data-code="a53ac868f92e6eebffe02b8e4025de1a" data-button-style="custom_small" data-button-text="Preorder with Bitcoin" data-width="200" href="https://coinbase.com/checkouts/a53ac868f92e6eebffe02b8e4025de1a">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+						</div>
 					</div>
-					<div class="span8 offset2 social">
-						<!-- Social buttons are not included in default Bootstrap. -->
-						<!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-						<button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-						<button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+					<div class="row-fluid">
+						<div class="span12 social">
+							<!-- AddThis Button BEGIN -->
+							<div class="addthis_toolbox addthis_default_style ">
+								<a class="addthis_button_preferred_1"></a>
+								<a class="addthis_button_preferred_2"></a>
+								<a class="addthis_button_preferred_3"></a>
+								<a class="addthis_button_preferred_4"></a>
+								<a class="addthis_button_compact"></a>
+								<a class="addthis_counter addthis_bubble_style"></a>
+							</div>
+							<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+							<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51ffc26c5170e3cf"></script>
+							<!-- AddThis Button END -->
+						</div>
 					</div>
 				</div>
 			</div> <!--div class="row-fluid pitch"-->
@@ -229,7 +261,7 @@
 			<!-- http://placehold.it -->
 			<div class="row-fluid section1">
 				<div class="span5 offset1 asset">
-					<img class="img-polaroid" src="images/lost_in_crowd.jpg" width="480" height="300">
+					<img class="img-polaroid" alt="Placeholder" src="images/lost_in_crowd.jpg" width="480" height="300">
 					<!--img class="img-polaroid" src="http://placehold.it/480x300"-->
 				</div>
 				<div class="span5 copy">
@@ -255,7 +287,7 @@
 					</p>
 				</div>
 				<div class="span5 asset">
-					<img class="img-polaroid" src="images/mobile_manners.jpg" width="480" height="300">
+					<img class="img-polaroid" alt="Placeholder" src="images/mobile_manners.jpg" width="480" height="300">
 					<!--img class="img-polaroid" src="http://placehold.it/480x300"-->
 				</div>
 			</div>
@@ -314,5 +346,15 @@
 				</div>
 			</div>
 		</div> <!--div class="container"-->
+
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+				})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-42970680-1', 'herokuapp.com');
+			ga('send', 'pageview');
+		</script>
 	</body>
 </html>
